--- a/_pages/more.html
+++ b/_pages/more.html
@@ -9,8 +9,8 @@ author_profile: true
 </p>
 
 <div style="text-align: center;">
-  <figure style="display: inline-block; margin: 0;">
-    <img src="../images/profile.png" alt="test" width="200">
+  <figure style="display: inline-block; margin: 0;" width="200">
+    <img src="../images/profile.png" alt="test">
     <figcaption>Text</figcaption>
   </figure>
 </div>
