--- a/_pages/more.html
+++ b/_pages/more.html
@@ -9,8 +9,8 @@ author_profile: true
 </p>
 
 <div style="text-align: center;">
- <figure style="margin: 0; text-align: center;">
+ <figure style="margin: 0;">
   <img src="../images/profile.png" alt="test" style="width: 200px; height: auto;">
-  <figcaption style="font: inherit; color: inherit; margin-top: 0.25rem;">Text</figcaption>
+  <figcaption style="font: inherit; color: inherit;">Test caption</figcaption>
 </figure>
 </div>
