--- a/_pages/more.html
+++ b/_pages/more.html
@@ -5,12 +5,12 @@ author_profile: true
 ---
 
 <p>
-  updated Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class wilderness trips with camping, backpacking, climbing, canoeing, and field research. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some pictures.
+  Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class wilderness trips with camping, backpacking, climbing, canoeing, and field research. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some pictures.
 </p>
 
 <div>
   <figure style="margin: 0 auto; text-align: center;">
     <img src="../images/profile.png" alt="test" style="width: 200px; height: auto;">
-    <figcaption style="font: inherit; color: inherit;">Test caption</figcaption>
+    <figcaption style="font: inherit; color: inherit;">Test caption 3</figcaption>
   </figure>
 </div>
