--- a/_pages/more.html
+++ b/_pages/more.html
@@ -11,6 +11,16 @@ author_profile: true
 <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center;">
     <img src="../images/profile.png" alt="test" style="display: block; margin: auto; width: 200px; height: auto;">
-    <figcaption>Test caption 4</figcaption>
+    <figcaption style="font: inherit; color: inherit;">Test caption 4</figcaption>
+  </figure>
+</div>
+
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center;">
+    <div style="display: flex; justify-content: center;">
+      <img src="../images/profile.png" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
+      <img src="../images/profile.png" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
+    </div>
+    <figcaption>Test caption 5</figcaption>
   </figure>
 </div>
