--- a/_pages/more.html
+++ b/_pages/more.html
@@ -11,10 +11,11 @@ author_profile: true
 <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center;">
     <div style="display: flex; justify-content: center;">
-      <img src="../images/profile.png" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
-      <img src="../images/profile.png" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
-      <img src="../images/profile.png" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
+      <img src="../images/IMG_0777.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
+      <img src="../images/IMG_0787.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
+      <img src="../images/IMG_0801.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
+      <img src="../images/IMG_0808.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit;">Test caption 5</figcaption>
+    <figcaption style="font: inherit; color: inherit;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025) </figcaption>
   </figure>
 </div>
