--- a/_pages/more.html
+++ b/_pages/more.html
@@ -19,3 +19,15 @@ author_profile: true
     <figcaption style="font: inherit; color: inherit;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025) </figcaption>
   </figure>
 </div>
+
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 600px;">
+    <div style="display: grid; gap: 10px; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Test caption</figcaption>
+  </figure>
+</div>
