--- a/_pages/more.html
+++ b/_pages/more.html
@@ -22,11 +22,10 @@ author_profile: true
 
 <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center; width: 100%; max-width: 600px;">
-    <div style="display: grid; gap: 10px; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
-      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
+    <div style="display: grid; gap: 10px; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+      <img src="../images/IMG_2985.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_3036.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_3062.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Test caption</figcaption>
   </figure>
