--- a/_pages/more.html
+++ b/_pages/more.html
@@ -8,7 +8,7 @@ author_profile: true
   Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some pictures.
 </p>
 
-<div style="text-align: center;">
+<!-- <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center;">
     <div style="display: flex; justify-content: center;">
       <img src="../images/IMG_0777.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
@@ -17,6 +17,18 @@ author_profile: true
       <img src="../images/IMG_0808.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
     </div>
     <figcaption style="font: inherit; color: inherit;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025) </figcaption>
+  </figure>
+</div> -->
+
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 600px;">
+    <div style="display: grid; gap: 10px; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+      <img src="../images/IMG_0777.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_0787.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;">
+       <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Alps near Bern, Switzerland (X'). Slept in mountain huts, bitten by sheep (Sep 2023) </figcaption>
   </figure>
 </div>
 
@@ -27,6 +39,17 @@ author_profile: true
       <img src="../images/IMG_3036.jpeg" alt="test" style="width: 100%; height: auto;">
       <img src="../images/IMG_3062.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Test caption</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Alps near Bern, Switzerland (X'). Slept in mountain huts, bitten by sheep (Sep 2023) </figcaption>
+  </figure>
+</div>
+
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 600px;">
+    <div style="display: grid; gap: 10px; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+      <img src="../images/IMG_2985.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_3036.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_3062.jpeg" alt="test" style="width: 100%; height: auto;">
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Alps near Bern, Switzerland (X'). Slept in mountain huts, bitten by sheep (Sep 2023) </figcaption>
   </figure>
 </div>
