--- a/_pages/more.html
+++ b/_pages/more.html
@@ -44,25 +44,22 @@ author_profile: true
 </div>
 
 <div style="text-align: center;">
-  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 600px;">
-    <div style="display: grid; gap: 10px; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
-      <img src="../images/IMG_0777.jpeg" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/IMG_0787.jpeg" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;">
-       <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
+  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 800px;">
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+      <!-- Left column: Tall image, spanning two rows -->
+      <div style="grid-row: span 2;">
+        <img src="../images/IMG_3036.jpeg" alt="Tall image" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Top short image -->
+      <div>
+        <img src="../images/IMG_2992.jpeg" alt="Short image 1" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Bottom short image -->
+      <div>
+        <img src="../images/IMG_3062.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
+      </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Alps near Bern, Switzerland (X'). Slept in mountain huts, bitten by sheep (Sep 2023) </figcaption>
-  </figure>
-</div>
-
-<div style="text-align: center;">
-  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 600px;">
-    <div style="display: grid; gap: 10px; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
-      <img src="../images/IMG_2985.jpeg" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/IMG_3036.jpeg" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/IMG_3062.jpeg" alt="test" style="width: 100%; height: auto;">
-    </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Alps near Bern, Switzerland (X'). Slept in mountain huts, bitten by sheep (Sep 2023) </figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Your caption goes here</figcaption>
   </figure>
 </div>
 
@@ -81,7 +78,7 @@ author_profile: true
       
       <!-- For 4 images in a 2×2 grid (set --num-cols: 2): -->
         <img src="../images/IMG_3036.jpeg" alt="test" style="width: 100%; height: auto;">
-     <img src="../images/IMG_2985.jpeg" alt="test" style="width: 100%; height: auto;">
+     <img src="../images/IMG_2992.jpeg" alt="test" style="width: 100%; height: auto;">
       <img src="../images/IMG_3062.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
     <figcaption style="margin-top: 10px;">Test caption</figcaption>
