--- a/_pages/more.html
+++ b/_pages/more.html
@@ -39,7 +39,7 @@ author_profile: true
       <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;">
        <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="margin-top: 10px;">Test caption</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;"">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025) </figcaption>
   </figure>
 </div>
 
