--- a/_pages/more.html
+++ b/_pages/more.html
@@ -21,7 +21,7 @@ author_profile: true
 </div> -->
 
 <div style="text-align: center;">
-  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 600px;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
     <!-- Change --num-cols to 2, 3, etc. depending on the layout desired -->
     <div style="--num-cols: 2; display: grid; gap: 10px; grid-template-columns: repeat(var(--num-cols), 1fr);">
       <!-- For 2 images: -->
@@ -44,7 +44,7 @@ author_profile: true
 </div>
 
 <div style="text-align: center;">
-  <figure style="display: inline-block; text-align: center; width: 100%; max-width: 800px;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
       <!-- Left column: Tall image, spanning two rows -->
       <div style="grid-row: span 2;">
