--- a/_pages/more.html
+++ b/_pages/more.html
@@ -5,21 +5,10 @@ author_profile: true
 ---
 
 <p>
-  Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some pictures.
+  Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some photos.
 </p>
 
-<!-- <div style="text-align: center;">
-  <figure style="display: inline-block; text-align: center;">
-    <div style="display: flex; justify-content: center;">
-      <img src="../images/IMG_0777.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
-      <img src="../images/IMG_0787.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
-      <img src="../images/IMG_0801.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
-      <img src="../images/IMG_0808.jpeg" alt="test" style="display: block; margin: 0 10px; width: 200px; height: auto;">
-    </div>
-    <figcaption style="font: inherit; color: inherit;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025) </figcaption>
-  </figure>
-</div> -->
-
+<!-- Sequoia -->
 <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center; width: 100%;">
     <!-- Change --num-cols to 2, 3, etc. depending on the layout desired -->
@@ -27,22 +16,17 @@ author_profile: true
       <!-- For 2 images: -->
       <!-- <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">  
            <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;"> -->
-      
-      <!-- For 3 images (set --num-cols: 3): -->
-      <!-- <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
-           <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">
-           <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;"> -->
-      
       <!-- For 4 images in a 2×2 grid (set --num-cols: 2): -->
      <img src="../images/IMG_0777.jpeg" alt="test" style="width: 100%; height: auto;">
       <img src="../images/IMG_0787.jpeg" alt="test" style="width: 100%; height: auto;">
       <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;">
        <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;"">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025) </figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025)</figcaption>
   </figure>
 </div>
 
+<!-- Switzerland -->
 <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center; width: 100%;">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
@@ -59,7 +43,24 @@ author_profile: true
         <img src="../images/IMG_3062.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Alps near Bern, Switzerland (X'). Slept in mountain huts, bitten by sheep (Sep 2023)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Blüemlisalphütte near Bern, Switzerland (9318'). Slept in mountain huts, bitten by sheep (Sep 2023)</figcaption>
+  </figure>
+</div>
+
+<!-- PCMI -->
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
+    <!-- Change --num-cols to 2, 3, etc. depending on the layout desired -->
+    <div style="--num-cols: 3; display: grid; gap: 10px; grid-template-columns: repeat(var(--num-cols), 1fr);">
+      <!-- For 2 images: -->
+      <!-- <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">  
+           <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;"> -->
+      <!-- For 4 images in a 2×2 grid (set --num-cols: 2): -->
+     <img src="../images/IMG_5898.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_1120.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_1217.jpeg" alt="test" style="width: 100%; height: auto;">
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute Utah. Second photo credit to [Liana Yepremyan](https://www.lianayepremyan.com) (Jul 2025)</figcaption>
   </figure>
 </div>
 
