--- a/_pages/more.html
+++ b/_pages/more.html
@@ -60,8 +60,28 @@ author_profile: true
       <img src="../images/IMG_1120.jpeg" alt="test" style="width: 100%; height: auto;">
       <img src="../images/IMG_1217.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute Utah. Second photo credit to [Liana Yepremyan](https://www.lianayepremyan.com) (Jul 2025)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute Utah.
+      Spotted pikas, what <a href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Second photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
   </figure>
 </div>
 
-
+<!-- Lake Superior -->
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+      <!-- Left column: Tall image, spanning two rows -->
+      <div style="grid-row: span 2;">
+        <img src="../images/IMG_3737.jpeg" alt="Tall image" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Top short image -->
+      <div>
+        <img src="../images/IMG_3661.jpeg" alt="Short image 1" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Bottom short image -->
+      <div>
+        <img src="../images/IMG_3749.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
+      </div>
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Lake Superior, Michigan (Aug 2020)</figcaption>
+  </figure>
+</div>
