--- a/_pages/more.html
+++ b/_pages/more.html
@@ -22,7 +22,7 @@ author_profile: true
       <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;">
        <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit (Jun 2025)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit, saw first camel spider (Jun 2025)</figcaption>
   </figure>
 </div>
 
@@ -60,8 +60,8 @@ author_profile: true
       <img src="../images/IMG_1120.jpeg" alt="test" style="width: 100%; height: auto;">
       <img src="../images/IMG_1217.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute Utah.
-      Spotted pikas, what <a href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Second photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute, Utah.
+      Spotted pikas, what <a href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
   </figure>
 </div>
 
@@ -83,5 +83,47 @@ author_profile: true
       </div>
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Lake Superior, Michigan (Aug 2020)</figcaption>
+  </figure>
+</div>
+
+<!-- Mount Diablo -->
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+      <!-- Left column: Tall image, spanning two rows -->
+      <div style="grid-row: span 2;">
+        <img src="../images/IMG_1900.jpeg" alt="Tall image" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Top short image -->
+      <div>
+        <img src="../images/IMG_1910.jpeg" alt="Short image 1" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Bottom short image -->
+      <div>
+        <img src="../images/IMG_2074.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
+      </div>
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Mount Diablo, California (3849'). Coyote pack ran in circles around tent at night (Dec 2022)</figcaption>
+  </figure>
+</div>
+
+<!-- Yosemite -->
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+      <!-- Left column: Tall image, spanning two rows -->
+      <div style="grid-row: span 2;">
+        <img src="../images/IMG_3813.jpeg" alt="Tall image" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Top short image -->
+      <div>
+        <img src="../images/IMG_3816.jpeg" alt="Short image 1" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Bottom short image -->
+      <div>
+        <img src="../images/IMG_3837.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
+      </div>
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite, California (X') (Nov 2023)</figcaption>
   </figure>
 </div>
