--- a/_pages/more.html
+++ b/_pages/more.html
@@ -8,24 +8,6 @@ author_profile: true
   Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some photos.
 </p>
 
-<!-- Sequoia -->
-<div style="text-align: center;">
-  <figure style="display: inline-block; text-align: center; width: 100%;">
-    <!-- Change --num-cols to 2, 3, etc. depending on the layout desired -->
-    <div style="--num-cols: 2; display: grid; gap: 10px; grid-template-columns: repeat(var(--num-cols), 1fr);">
-      <!-- For 2 images: -->
-      <!-- <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">  
-           <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;"> -->
-      <!-- For 4 images in a 2×2 grid (set --num-cols: 2): -->
-     <img src="../images/IMG_0777.jpeg" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/IMG_0787.jpeg" alt="test" style="width: 100%; height: auto;">
-      <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;">
-       <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
-    </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit, saw first camel spider (Jun 2025)</figcaption>
-  </figure>
-</div>
-
 <!-- Switzerland -->
 <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center; width: 100%;">
@@ -65,45 +47,60 @@ author_profile: true
   </figure>
 </div>
 
+<!-- Sequoia -->
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
+    <!-- Change --num-cols to 2, 3, etc. depending on the layout desired -->
+    <div style="--num-cols: 2; display: grid; gap: 10px; grid-template-columns: repeat(var(--num-cols), 1fr);">
+      <!-- For 2 images: -->
+      <!-- <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">  
+           <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;"> -->
+      <!-- For 4 images in a 2×2 grid (set --num-cols: 2): -->
+<!--      <img src="../images/IMG_0777.jpeg" alt="test" style="width: 100%; height: auto;"> -->
+      <img src="../images/IMG_0787.jpeg" alt="test" style="width: 100%; height: auto;">
+<!--       <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;"> -->
+       <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit, saw first camel spider (Jun 2025)</figcaption>
+  </figure>
+</div>
+
+<!-- Cambridge -->
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
+    <!-- Change --num-cols to 2, 3, etc. depending on the layout desired -->
+    <div style="--num-cols: 2; display: grid; gap: 10px; grid-template-columns: repeat(var(--num-cols), 1fr);">
+      <!-- For 2 images: -->
+      <!-- <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;">  
+           <img src="../images/profile.png" alt="test" style="width: 100%; height: auto;"> -->
+      <!-- For 4 images in a 2×2 grid (set --num-cols: 2): -->
+     <img src="../images/IMG_1426.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_1420.jpeg" alt="test" style="width: 100%; height: auto;">
+      <img src="../images/IMG_1512.jpeg" alt="test" style="width: 100%; height: auto;">
+       <img src="../images/IMG_1575.jpeg" alt="test" style="width: 100%; height: auto;">
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">St. John's and Magdalene colleges Cambridge, UK. Specimens from the Hunterian museum in London (Sep 2025)</figcaption>
+  </figure>
+</div>
+
 <!-- Lake Superior -->
 <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center; width: 100%;">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
       <!-- Left column: Tall image, spanning two rows -->
       <div style="grid-row: span 2;">
-        <img src="../images/IMG_3737.jpeg" alt="Tall image" style="width: 100%; height: auto;">
+        <img src="../images/IMG_3737.JPG" alt="Tall image" style="width: 100%; height: auto;">
       </div>
       <!-- Right column: Top short image -->
       <div>
-        <img src="../images/IMG_3661.jpeg" alt="Short image 1" style="width: 100%; height: auto;">
+        <img src="../images/IMG_3661.JPG" alt="Short image 1" style="width: 100%; height: auto;">
       </div>
       <!-- Right column: Bottom short image -->
       <div>
-        <img src="../images/IMG_3749.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
+        <img src="../images/IMG_3749.JPG" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Lake Superior, Michigan (Aug 2020)</figcaption>
-  </figure>
-</div>
-
-<!-- Mount Diablo -->
-<div style="text-align: center;">
-  <figure style="display: inline-block; text-align: center; width: 100%;">
-    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-      <!-- Left column: Tall image, spanning two rows -->
-      <div style="grid-row: span 2;">
-        <img src="../images/IMG_1900.jpeg" alt="Tall image" style="width: 100%; height: auto;">
-      </div>
-      <!-- Right column: Top short image -->
-      <div>
-        <img src="../images/IMG_1910.jpeg" alt="Short image 1" style="width: 100%; height: auto;">
-      </div>
-      <!-- Right column: Bottom short image -->
-      <div>
-        <img src="../images/IMG_2074.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
-      </div>
-    </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Mount Diablo, California (3849'). Coyote pack ran in circles around tent at night (Dec 2022)</figcaption>
   </figure>
 </div>
 
@@ -125,5 +122,26 @@ author_profile: true
       </div>
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite, California (X') (Nov 2023)</figcaption>
+  </figure>
+</div>
+
+<!-- Mount Diablo -->
+<div style="text-align: center;">
+  <figure style="display: inline-block; text-align: center; width: 100%;">
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+      <!-- Left column: Tall image, spanning two rows -->
+      <div style="grid-row: span 2;">
+        <img src="../images/IMG_1900.jpeg" alt="Tall image" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Top short image -->
+      <div>
+        <img src="../images/IMG_1910.jpeg" alt="Short image 1" style="width: 100%; height: auto;">
+      </div>
+      <!-- Right column: Bottom short image -->
+      <div>
+        <img src="../images/IMG_2074.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
+      </div>
+    </div>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Mount Diablo, California (3849'). Coyote pack ran in circles around tent at night (Dec 2022)</figcaption>
   </figure>
 </div>
