--- a/_pages/more.html
+++ b/_pages/more.html
@@ -79,7 +79,9 @@ author_profile: true
       <img src="../images/IMG_1512.jpeg" alt="test" style="width: 100%; height: auto;">
        <img src="../images/IMG_1575.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">St. John's and Magdalene colleges Cambridge, UK. Specimens from the Hunterian museum in London (Sep 2025)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">St. John's and Magdalene colleges Cambridge, UK. 
+      While visiting <a href="https://mathematics.stanford.edu/people/maria-romina-ivan">Maria-Romina Ivan</a> and 
+      <a href="https://www.maths.cam.ac.uk/person/ibl10">Imre Leader</a>. Specimens from the Hunterian museum in London (Sep 2025)</figcaption>
   </figure>
 </div>
 
@@ -121,7 +123,7 @@ author_profile: true
         <img src="../images/IMG_3837.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite, California (X') (Nov 2023)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite, California (X'). With fellow students Selim Amar and Alex Lopez (Nov 2023)</figcaption>
   </figure>
 </div>
 
