--- a/_pages/more.html
+++ b/_pages/more.html
@@ -42,7 +42,7 @@ author_profile: true
       <img src="../images/IMG_1120.jpeg" alt="test" style="width: 100%; height: auto;">
       <img src="../images/IMG_1217.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute, Utah.
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute.
       Spotted pikas, what <a href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
   </figure>
 </div>
@@ -123,7 +123,7 @@ author_profile: true
         <img src="../images/IMG_3837.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite, California (X'). With fellow students Selim Amar and Alex Lopez (Nov 2023)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite national park (X'). With fellow students Selim Amar and Alex Lopez (Nov 2023)</figcaption>
   </figure>
 </div>
 
@@ -144,6 +144,6 @@ author_profile: true
         <img src="../images/IMG_2074.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Mount Diablo, California (3849'). Coyote pack ran in circles around tent at night (Dec 2022)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Mount Diablo (3849'). Coyote pack ran in circles around tent at night (Dec 2022)</figcaption>
   </figure>
 </div>
