--- a/_pages/more.html
+++ b/_pages/more.html
@@ -86,7 +86,7 @@ author_profile: true
 </div>
 
 <!-- Lake Superior -->
-<div style="text-align: center;">
+<!-- <div style="text-align: center;">
   <figure style="display: inline-block; text-align: center; width: 100%;">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
       <!-- Left column: Tall image, spanning two rows -->
@@ -104,7 +104,7 @@ author_profile: true
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Lake Superior, Michigan (Aug 2020)</figcaption>
   </figure>
-</div>
+</div> -->
 
 <!-- Yosemite -->
 <div style="text-align: center;">
@@ -123,7 +123,7 @@ author_profile: true
         <img src="../images/IMG_3837.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite national park (X'). With fellow students Selim Amar and Alex Lopez (Nov 2023)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite national park. With fellow students Selim Amar and Alex Lopez (Nov 2023)</figcaption>
   </figure>
 </div>
 
