--- a/_pages/more.html
+++ b/_pages/more.html
@@ -4,6 +4,21 @@ permalink: /more/
 author_profile: true
 ---
 
+<style>
+
+  a {
+  color: blue;
+  text-decoration: underline;
+}
+a:visited {
+  color: blue;
+}
+a:hover {
+  color: darkblue;
+}
+
+</style>
+
 <p>
   Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some photos.
 </p>
