--- a/_pages/more.html
+++ b/_pages/more.html
@@ -5,18 +5,10 @@ author_profile: true
 ---
 
 <style>
-
-  a {
+ figcaption a {
   color: blue;
   text-decoration: underline;
 }
-a:visited {
-  color: blue;
-}
-a:hover {
-  color: darkblue;
-}
-
 </style>
 
 <p>
