--- a/_pages/more.html
+++ b/_pages/more.html
@@ -11,7 +11,7 @@ author_profile: true
 </style>
 
 <p>
-  Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri - but I usually refer to it as "hippie school" since the curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some photos.
+  Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri. The curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some photos.
 </p>
 
 <!-- Switzerland -->
