--- a/_pages/more.html
+++ b/_pages/more.html
@@ -4,12 +4,6 @@ permalink: /more/
 author_profile: true
 ---
 
-<style>
- figcaption a {
-  all: revert;
-}
-</style>
-
 <p>
   Growing up I attended <a href="https://www.thecollegeschool.org">the college school</a> in Saint Louis, Missouri. The curriculum was focused on outdoor education and included annual class camping/backpacking trips. Our motto was to learn by doing, and besides being a great way to approach math it taught me to love adventure. Here are some photos.
 </p>
@@ -49,7 +43,7 @@ author_profile: true
       <img src="../images/IMG_1217.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute.
-      Spotted pikas, what <a href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
+      Spotted pikas, what <a style="font: inherit; color: inherit; text-decoration: inherit;" href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
   </figure>
 </div>
 
