--- a/_pages/more.html
+++ b/_pages/more.html
@@ -43,7 +43,7 @@ author_profile: true
       <img src="../images/IMG_1217.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute.
-      Spotted pikas, what <a href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
+      Spotted pikas, what <a style="color:#00a0c6; text-decoration:underline; text-decoration-thickness:1px; text-underline-offset:2px; text-decoration-color:#00a0c6; cursor:pointer;" href="https://stanford.edu/~speluse/">Sarah Peluse</a> believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to <a href="https://www.lianayepremyan.com">Liana Yepremyan</a> (Jul 2025)</figcaption>
   </figure>
 </div>
 
