--- a/_pages/more.html
+++ b/_pages/more.html
@@ -25,7 +25,7 @@ author_profile: true
         <img src="../images/IMG_3062.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Blüemlisalphütte near Bern, Switzerland (9318'). Slept in mountain huts, bitten by sheep (Sep 2023)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Blüemlisalphütte near Bern, Switzerland (9318'). Slept in mountain huts, bitten by sheep (Sep 2023).</figcaption>
   </figure>
 </div>
 
@@ -43,7 +43,7 @@ author_profile: true
       <img src="../images/IMG_1217.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Wasatch forest and Bald peak, Park City Mathematics Institute.
-      Spotted pikas, what Sarah Peluse believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to Liana Yepremyan (Jul 2025)</figcaption>
+      Spotted pikas, what Sarah Peluse believes to be a ruffed grouse, and a caddisfly larva. Leftmost photo credit to Liana Yepremyan (Jul 2025).</figcaption>
   </figure>
 </div>
 
@@ -61,7 +61,7 @@ author_profile: true
 <!--       <img src="../images/IMG_0801.jpeg" alt="test" style="width: 100%; height: auto;"> -->
        <img src="../images/IMG_0808.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit, saw first camel spider (Jun 2025)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Sequoia national park, Alta peak (11208'). Barely escaped thunderstorm at summit, saw first camel spider (Jun 2025).</figcaption>
   </figure>
 </div>
 
@@ -80,7 +80,7 @@ author_profile: true
        <img src="../images/IMG_1575.jpeg" alt="test" style="width: 100%; height: auto;">
     </div>
     <figcaption style="font: inherit; color: inherit; margin-top: 10px;">St. John's and Magdalene colleges Cambridge, UK. 
-      While visiting Maria-Romina Ivan and Imre Leader. Specimens from the Hunterian museum in London (Sep 2025)</figcaption>
+      While visiting Maria-Romina Ivan and Imre Leader. Specimens from the Hunterian museum in London (Sep 2025).</figcaption>
   </figure>
 </div>
 
@@ -122,7 +122,7 @@ author_profile: true
         <img src="../images/IMG_3837.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite national park. With fellow students Selim Amar and Alex Lopez (Nov 2023)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Yosemite national park. With fellow students Selim Amar and Alex Lopez (Nov 2023).</figcaption>
   </figure>
 </div>
 
@@ -143,6 +143,6 @@ author_profile: true
         <img src="../images/IMG_2074.jpeg" alt="Short image 2" style="width: 100%; height: auto;">
       </div>
     </div>
-    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Mount Diablo (3849'). Coyote pack ran in circles around tent at night (Dec 2022)</figcaption>
+    <figcaption style="font: inherit; color: inherit; margin-top: 10px;">Mount Diablo (3849'). Coyote pack ran in circles around tent at night (Dec 2022).</figcaption>
   </figure>
 </div>
